<resources>
    <string name="app_name">SmartSendApp</string>

    <!--Server url-->
    <string name="server_url">http://galaxyict.com/tajim.galaxyict.com/smartsend</string>
    <string name="gcm_project_number">1051391508793</string>

    <!--Activity title-->
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_client_dash_board">ClientDashBoardActivity</string>
    <string name="title_activity_rider_dashboard">RiderDashboardActivity</string>
    <string name="title_activity_place_order">PlaceOrderActivity</string>
    <string name="title_activity_order_details_for_rider">OrderDetailsForRiderActivity</string>
    <string name="title_activity_accepted_rider">AcceptedRiderActivity</string>
    <string name="title_activity_order_failed">OrderFailedActivity</string>

    <!--Menu-->
    <string name="menu_title_dashboard">Dashboard</string>
    <string name="menu_title_place_order">Place Order</string>
    <string name="menu_title_current_order">Current Orders</string>
    <string name="menu_title_order_history">Order History</string>
    <string name="menu_title_account_settings">Account Settings</string>
    <string name="menu_title_outlets">Outlets</string>
    <string name="menu_title_signout">Signout</string>

    <!--content-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Button text-->
    <string name="btn_text_place_order">PLACE ORDER</string>

</resources>
