<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_rider_dashboard"
            android:icon="@drawable/ic_account_settings"
            android:title="@string/menu_title_dashboard"
            android:checked="true"/>
        <item
            android:id="@+id/nav_rider_current_order"
            android:icon="@drawable/ic_order"
            android:title="@string/menu_title_current_order" />

        <item
            android:id="@+id/nav_rider_order_history"
            android:icon="@drawable/ic_order_history"
            android:title="@string/menu_title_order_history" />

        <item
            android:id="@+id/nav_rider_account_settings"
            android:icon="@drawable/ic_account_settings"
            android:title="@string/menu_title_account_settings" />

        <item
            android:id="@+id/nav_rider_signout"
            android:icon="@drawable/ic_singout"
            android:title="@string/menu_title_signout" />

    </group>

</menu>
